refactor: not use HoldingWithProfitRes.class in ProfitService